# FlowMaster

./: .env.example  .env.production  .gitignore  CLAUDE.md  CODE_QUALITY_OPTIMIZATION.md  check_database_data.py  check_user_roles.py  config_test_manual.py  fix_user_permissions.py  fix_user_roles.py  main.py  pyproject.toml  requirements.txt  simple_test.py  test_api_endpoints.py  test_config.py  test_database_init.py  test_db_creation.py  test_entities.py  test_entity_imports.py  test_permissions.py  test_rbac_system.py
apps/common/base/: __init__.py
apps/common/config/: app_config.py  app_factory.py  captcha_properties.py  lifespan.py  middleware_registry.py  redis_config.py  router_registry.py  rsa_properties.py  storage_properties.py  tenant_extension_properties.py
apps/common/constant/: cache_constants.py  container_constants.py  global_constants.py  regex_constants.py  string_constants.py  ui_constants.py
apps/common/context/: __init__.py  role_context.py  tenant_context.py  tenant_context_holder.py  user_context.py  user_context_holder.py  user_extra_context.py
apps/common/controller/: __init__.py  captcha_controller.py  common_controller.py  health_controller.py  tenant_controller.py
apps/common/decorators/: __init__.py  log_decorator.py  permission_decorator.py
apps/common/dependencies/: __init__.py  auth_dependencies.py  (+1 more)
apps/workflow/: __init__.py
db/sqlite/: data.sql  schema.sql
docs/: wecom_login.md
scripts/: check_menu_data.py
tests/: conftest.py  test_app.py  test_auth.py  test_debug.py  test_detailed_debug.py  test_jwt.py
(+271 files in other folders)
